<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiApp</string>
    <string name="action_settings">Settings</string>
    <string name="brand">Brand</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
	<string name="title_register_customer_activity">Register new customer</string>
	<string name="title_register_taxi_activity">Register new taxi</string>
	<string name="title_main_customer_activity">Welcome to taxiapp</string>
	<string name="register_customer">Register a customer</string>
	<string name="register_taxi">Register a taxi</string>
	<string name="mobile">Mobile</string>
	<string name="model">Model</string>
	<string name="reg_number">Registrational number</string>
	<string name="price_per_km">Price per km</string>
	<string name="remember_me">Remember me</string>
	
	
	<string name="username">Username</string>
	
	<string name="register_customer_url">http://www.mrjumpy.no-ip.biz</string>
	
	<string name="not_logged_in">Not logged in</string>
	
	<string name="make_new_order">Make new order</string>
	
	<string name="view_history">View history</string>
	
	<string name="view_map">View map</string>
	
	<string name="from">From</string>
	
	<string name="search">Search</string>
	
	<string name="empty">No data</string>
	
	<string name="proceed">Proceed</string>
    
	
	
</resources>
