<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/usernameLabelMainCustomerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/not_logged_in"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/makeOrderButtonMainCustomerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameLabelMainCustomerActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/make_new_order" />

    <Button
        android:id="@+id/viewHistoryButtonMainCustomerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makeOrderButtonMainCustomerActivity"
        android:layout_alignRight="@+id/makeOrderButtonMainCustomerActivity"
        android:layout_below="@+id/makeOrderButtonMainCustomerActivity"
        android:layout_marginTop="16dp"
        android:text="@string/view_history" />

    <Button
        android:id="@+id/viewMapButtonMainCustomerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewHistoryButtonMainCustomerActivity"
        android:layout_alignRight="@+id/viewHistoryButtonMainCustomerActivity"
        android:layout_below="@+id/viewHistoryButtonMainCustomerActivity"
        android:layout_marginTop="14dp"
        android:text="@string/view_map" />

</RelativeLayout>
