<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mobileNum"
        android:layout_alignBottom="@+id/mobileNum"
        android:layout_alignParentLeft="true"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentLeft="true"
        android:text="@string/password" />

    <TextView
        android:id="@+id/ConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmPassword"
        android:layout_alignBottom="@+id/confirmPassword"
        android:layout_alignParentLeft="true"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/registerCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="16dp"
        android:text="Register" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmPassword"
        android:layout_alignLeft="@+id/mobileNum"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mobileNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_toRightOf="@+id/ConfirmLabel"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mobileNum"
        android:layout_alignRight="@+id/mobileNum"
        android:layout_toRightOf="@+id/ConfirmLabel"
        android:ems="10" />

    <TextView
        android:id="@+id/userLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_alignLeft="@+id/loginLabel"
        android:text="Username" />

</RelativeLayout>
